--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,8 @@
+@import 'theme-color.scss';
+
 html{
   font-size: 16px;
-  background-color: #18191A;
-  color: #E4E6EB;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-family: Helvetica, Arial, sans-serif;
 }
