--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -46,3 +46,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+input{
+  background-color: transparent;
+  border: none;
+}
+
+input:focus{
+  color: inherit;
+  outline: none;
+}
