update background component color

--- a/src/style/theme-color.scss
+++ b/src/style/theme-color.scss
@@ -2,7 +2,7 @@
   --primary-color: #2374E1;
   --background-color: #18191A;
   --text-color: #E4E6EB;
-  --background-component: #3A3B3C;
+  --background-component: rgba(255, 255, 255, 0.1);
   --transition-duration: .2s;
   --grey-color: #898F9C;
 }
