add button reset css rule

--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -64,3 +64,9 @@ a{
   cursor: pointer;
   text-decoration: none;
 }
+
+button{
+  background-color: transparent;
+  border: none;
+  color: inherit;
+}
