--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -141,6 +141,11 @@ input:focus {
   outline: none;
 }
 
+h1, h2, h3, h4, h5, h6{
+  font-weight: inherit;
+  font-size: inherit;
+}
+
 a {
   cursor: pointer;
   text-decoration: none;
