--- a/src/style/theme-color.scss
+++ b/src/style/theme-color.scss
@@ -1,8 +1,9 @@
 :root{
   --primary-color: #2374E1;
   --background-color: #18191A;
+  --background-color-2: #242526;
   --text-color: #E4E6EB;
-  --background-component: rgba(255, 255, 255, 0.1);
+  --background-component: #3E4042;
   --transition-duration: .2s;
   --grey-color: #898F9C;
 }
